<resources>
    <string name="app_name">Drop</string>

    <string name="drop_btn">DROP</string>
    <string name="drop_btn_desc">drop btn</string>
    <string name="settings_btn_desc">settings btn</string>

    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="conf_password_label">Confirm password</string>

    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>

    <string name="location_provider_dialog_title">Enable location</string>
    <string name="location_provider_dialog_message">Drop needs the device location to be enabled
        to offer an optimal experience.</string>
    <string name="location_provider_dialog_button">OPEN SETTINGS</string>

    <string name="drop_dialog_message">Your message</string>
    <string name="drop_dialog_color">Color</string>

    <string name="like_btn_desc">like btn</string>
    <string name="report_btn_desc">report btn</string>

    <string name="profile_photo_desc">user photo</string>
    <string name="profile_username">Anonymous</string>
    <string name="profile_email">anonymous@world.com</string>
    <string name="profile_nb_drop">0</string>
    <string name="profile_nb_drop_label">drops</string>
    <string name="profile_nb_like">0</string>
    <string name="profile_nb_like_label">likes received</string>
    <string name="profile_nb_report">0</string>
    <string name="profile_nb_report_label">reports received</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_reload">Clean the AR scene</string>
    <string name="menu_plane_on">Turn ON plane detection</string>
    <string name="menu_plane_off">Turn OFF plane detection</string>
    <string name="menu_debug_on">Turn ON debug mode</string>
    <string name="menu_debug_off">Turn OFF debug mode</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sign_in">Sign In</string>
</resources>
